finished munger.py

--- a/old_notebooks/mumger.ipynb
+++ b/old_notebooks/mumger.ipynb
@@ -13,8 +13,7 @@
     "import re\n",
     "import datetime as dt\n",
     "import json\n",
-    "import pymongo\n",
-    "from plotting_streamlit import data_import, scraper, get_db_client, data_export"
+    "import pymongo"
    ]
   },
   {
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ec3775fa-27b9-47a7-ac80-27678ae9a498",
    "metadata": {},
    "outputs": [],
@@ -115,155 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f5ccb6c5-607b-4685-ba22-4739129f9c38",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user</th>\n",
-       "      <th>date</th>\n",
-       "      <th>time</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Sunbird24</td>\n",
-       "      <td>18/03/2023</td>\n",
-       "      <td>07:29</td>\n",
-       "      <td>Previous thread: www.mumsnet.com/talk/_chat/47...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>bruffin</td>\n",
-       "      <td>19/03/2023</td>\n",
-       "      <td>19:16</td>\n",
-       "      <td>marking my spot Add message Save Share Report ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MarmiteWine</td>\n",
-       "      <td>19/03/2023</td>\n",
-       "      <td>20:38</td>\n",
-       "      <td>00:45 today Add message Save Share Report Book...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Drywhitefruitycidergin</td>\n",
-       "      <td>20/03/2023</td>\n",
-       "      <td>00:54</td>\n",
-       "      <td>⏱️ I just completed PlusWord in 02:47 www.tele...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Drywhitefruitycidergin</td>\n",
-       "      <td>20/03/2023</td>\n",
-       "      <td>00:55</td>\n",
-       "      <td>*thread ffs - that's why I'm so slow at pw too...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1053</th>\n",
-       "      <td>sanityisamyth</td>\n",
-       "      <td>21/03/2023</td>\n",
-       "      <td>05:44</td>\n",
-       "      <td>⏱️ I just completed PlusWord in 01:03 www.tele...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1054</th>\n",
-       "      <td>Drywhitefruitycidergin</td>\n",
-       "      <td>21/03/2023</td>\n",
-       "      <td>06:24</td>\n",
-       "      <td>⏱️ I just completed PlusWord in 04:04 www.tele...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1055</th>\n",
-       "      <td>DadDadDad</td>\n",
-       "      <td>21/03/2023</td>\n",
-       "      <td>07:04</td>\n",
-       "      <td>1:27 for me today. Add message Save Share Repo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1056</th>\n",
-       "      <td>Madcats</td>\n",
-       "      <td>21/03/2023</td>\n",
-       "      <td>09:40</td>\n",
-       "      <td>It took me a while to understand the answer to...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1057</th>\n",
-       "      <td>PlusWordImogen</td>\n",
-       "      <td>21/03/2023</td>\n",
-       "      <td>10:50</td>\n",
-       "      <td>Hi all! I work on the Puzzles team at the Tele...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1058 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        user        date   time  \\\n",
-       "0                  Sunbird24  18/03/2023  07:29   \n",
-       "1                    bruffin  19/03/2023  19:16   \n",
-       "2                MarmiteWine  19/03/2023  20:38   \n",
-       "3     Drywhitefruitycidergin  20/03/2023  00:54   \n",
-       "4     Drywhitefruitycidergin  20/03/2023  00:55   \n",
-       "...                      ...         ...    ...   \n",
-       "1053           sanityisamyth  21/03/2023  05:44   \n",
-       "1054  Drywhitefruitycidergin  21/03/2023  06:24   \n",
-       "1055               DadDadDad  21/03/2023  07:04   \n",
-       "1056                 Madcats  21/03/2023  09:40   \n",
-       "1057          PlusWordImogen  21/03/2023  10:50   \n",
-       "\n",
-       "                                                   text  \n",
-       "0     Previous thread: www.mumsnet.com/talk/_chat/47...  \n",
-       "1     marking my spot Add message Save Share Report ...  \n",
-       "2     00:45 today Add message Save Share Report Book...  \n",
-       "3     ⏱️ I just completed PlusWord in 02:47 www.tele...  \n",
-       "4     *thread ffs - that's why I'm so slow at pw too...  \n",
-       "...                                                 ...  \n",
-       "1053  ⏱️ I just completed PlusWord in 01:03 www.tele...  \n",
-       "1054  ⏱️ I just completed PlusWord in 04:04 www.tele...  \n",
-       "1055  1:27 for me today. Add message Save Share Repo...  \n",
-       "1056  It took me a while to understand the answer to...  \n",
-       "1057  Hi all! I work on the Puzzles team at the Tele...  \n",
-       "\n",
-       "[1058 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "whole_post_list=[]\n",
     "\n",
@@ -290,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5584b88b-4419-47cb-9731-d25d46ef190d",
    "metadata": {
     "tags": []
@@ -315,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "86e2efb6-5742-41ba-8b3e-76e9bd47755b",
    "metadata": {},
    "outputs": [],
@@ -337,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0b789493-e469-4e54-a415-30f581528120",
    "metadata": {},
    "outputs": [],
@@ -380,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "117bb3d3-4cf8-48a1-ad44-8b79c5f96e1c",
    "metadata": {},
    "outputs": [],
@@ -402,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b62a2fb5-493b-408c-a51a-9c96d9628645",
    "metadata": {
     "tags": []
@@ -422,49 +276,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>load_ts</th>\n",
-       "      <th>time</th>\n",
-       "      <th>user</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [load_ts, time, user]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not dataframe.empty:\n",
     "    data_export(df)"
