combined scraper files

--- a/puzzle_scraper.ipynb
+++ b/puzzle_scraper.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "897d043a-4c81-4b8b-8196-3b61085ddee8",
    "metadata": {
     "tags": []
@@ -33,7 +33,6 @@
     "\n",
     "row = {'date' : r_json['copy']['date-publish-analytics'][:10],\n",
     "      'puzzle_number' : r_json['meta']['number'],\n",
-    "      'id' :r_json['meta']['id'],\n",
     "      'plusword_solution' : r_json['settings']['solution']}\n",
     "\n",
     "for direction in ['across', 'down']:\n",
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b996c277-9382-469d-8846-da44eb2c1111",
    "metadata": {
     "tags": []
@@ -70,10 +69,10 @@
     "        cell_class = cell.get_attribute(\"class\")\n",
     "                \n",
     "        if 'right-letter-wrong-column' in cell_class:\n",
-    "            yellow.append((re.search(match, cell_class).group(0).strip('C')))\n",
+    "            yellow.append(int(re.search(match, cell_class).group(0).strip('C')) + 1)\n",
     "            \n",
     "        if 'right-letter-right-column' in cell_class:\n",
-    "            green.append((re.search(match, cell_class).group(0).strip('C')))\n",
+    "            green.append(int(re.search(match, cell_class).group(0).strip('C')) + 1)\n",
     "            \n",
     "row.update({'yellow' : yellow,\n",
     "            'green' : green})"
@@ -81,9 +80,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f826cdef-de85-464e-b693-18e0bc5ae76d",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df = pd.DataFrame.from_dict([row])\n",
+    "df['date'] = pd.to_datetime(df['date'], format='%Y-%m-%d')\n",
+    "df = df.replace('\"', '', regex=True)\n",
+    "df = df.replace(\"&#039\", '', regex=True)\n",
+    "df = df.replace(';', '', regex=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "49040609-3c82-4881-9909-a401dbea0a30",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -108,7 +124,6 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>puzzle_number</th>\n",
-       "      <th>id</th>\n",
        "      <th>plusword_solution</th>\n",
        "      <th>clue_across_1</th>\n",
        "      <th>clue_across_2</th>\n",
@@ -116,7 +131,7 @@
        "      <th>clue_across_4</th>\n",
        "      <th>clue_across_5</th>\n",
        "      <th>clue_down_1</th>\n",
-       "      <th>...</th>\n",
+       "      <th>clue_down_2</th>\n",
        "      <th>clue_down_3</th>\n",
        "      <th>clue_down_4</th>\n",
        "      <th>clue_down_5</th>\n",
@@ -132,109 +147,96 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2023-04-22</td>\n",
-       "      <td>335</td>\n",
-       "      <td>25564</td>\n",
-       "      <td>PAINT</td>\n",
-       "      <td>Sends junk email to</td>\n",
-       "      <td>Jewish scripture</td>\n",
-       "      <td>Cream of the crop</td>\n",
-       "      <td>Let up</td>\n",
-       "      <td>Garb</td>\n",
-       "      <td>Mount such as a horse</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Crop up</td>\n",
-       "      <td>Makes the winning move at chess</td>\n",
-       "      <td>Outbuildings</td>\n",
-       "      <td>SPAMS</td>\n",
-       "      <td>TORAH</td>\n",
-       "      <td>ELITE</td>\n",
-       "      <td>EASED</td>\n",
-       "      <td>DRESS</td>\n",
-       "      <td>[1, 2, 5, 8, 13]</td>\n",
-       "      <td>[12, 16]</td>\n",
+       "      <td>2023-04-23</td>\n",
+       "      <td>336</td>\n",
+       "      <td>CHEEK</td>\n",
+       "      <td>Knives and ____</td>\n",
+       "      <td>Whats happening</td>\n",
+       "      <td>Uncertain, dodgy</td>\n",
+       "      <td>____ Sam, the USA</td>\n",
+       "      <td>Removes rind from</td>\n",
+       "      <td>Brassed off</td>\n",
+       "      <td>Sheepish?</td>\n",
+       "      <td>See how the land lies</td>\n",
+       "      <td>Toll</td>\n",
+       "      <td>Eyelid sores</td>\n",
+       "      <td>FORKS</td>\n",
+       "      <td>EVENT</td>\n",
+       "      <td>DICEY</td>\n",
+       "      <td>UNCLE</td>\n",
+       "      <td>PEELS</td>\n",
+       "      <td>[4, 6, 13, 18, 20, 22]</td>\n",
+       "      <td>[8, 14, 23]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        date puzzle_number     id plusword_solution        clue_across_1  \\\n",
-       "0 2023-04-22           335  25564             PAINT  Sends junk email to   \n",
+       "        date puzzle_number plusword_solution    clue_across_1  \\\n",
+       "0 2023-04-23           336             CHEEK  Knives and ____   \n",
        "\n",
-       "      clue_across_2      clue_across_3 clue_across_4 clue_across_5  \\\n",
-       "0  Jewish scripture  Cream of the crop        Let up          Garb   \n",
+       "     clue_across_2     clue_across_3      clue_across_4      clue_across_5  \\\n",
+       "0  Whats happening  Uncertain, dodgy  ____ Sam, the USA  Removes rind from   \n",
        "\n",
-       "             clue_down_1  ... clue_down_3                      clue_down_4  \\\n",
-       "0  Mount such as a horse  ...     Crop up  Makes the winning move at chess   \n",
+       "   clue_down_1 clue_down_2            clue_down_3 clue_down_4   clue_down_5  \\\n",
+       "0  Brassed off   Sheepish?  See how the land lies        Toll  Eyelid sores   \n",
        "\n",
-       "    clue_down_5 answer_1 answer_2 answer_3 answer_4 answer_5  \\\n",
-       "0  Outbuildings    SPAMS    TORAH    ELITE    EASED    DRESS   \n",
+       "  answer_1 answer_2 answer_3 answer_4 answer_5                  yellow  \\\n",
+       "0    FORKS    EVENT    DICEY    UNCLE    PEELS  [4, 6, 13, 18, 20, 22]   \n",
        "\n",
-       "             yellow     green  \n",
-       "0  [1, 2, 5, 8, 13]  [12, 16]  \n",
-       "\n",
-       "[1 rows x 21 columns]"
+       "         green  \n",
+       "0  [8, 14, 23]  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame.from_records([row])\n",
-    "\n",
-    "\n",
-    "df['date'] = pd.to_datetime(df['date'], format='%Y-%m-%d')\n",
-    "\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "49040609-3c82-4881-9909-a401dbea0a30",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 6,
+   "id": "21c74757-70a8-4af1-9b40-92a0ccc0f290",
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "date                 datetime64[ns]\n",
-       "puzzle_number                object\n",
-       "id                           object\n",
-       "plusword_solution            object\n",
-       "clue_across_1                object\n",
-       "clue_across_2                object\n",
-       "clue_across_3                object\n",
-       "clue_across_4                object\n",
-       "clue_across_5                object\n",
-       "clue_down_1                  object\n",
-       "clue_down_2                  object\n",
-       "clue_down_3                  object\n",
-       "clue_down_4                  object\n",
-       "clue_down_5                  object\n",
-       "answer_1                     object\n",
-       "answer_2                     object\n",
-       "answer_3                     object\n",
-       "answer_4                     object\n",
-       "answer_5                     object\n",
-       "yellow                       object\n",
-       "green                        object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-23 20:33:34.362 INFO    selenium.webdriver.common.selenium_manager: Executing: /home/tomwh/.local/lib/python3.10/site-packages/selenium/webdriver/common/linux/selenium-manager --browser firefox --output json\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [date, puzzle_number, plusword_solution, clue_across_1, clue_across_2, clue_across_3, clue_across_4, clue_across_5, clue_down_1, clue_down_2, clue_down_3, clue_down_4, clue_down_5, answer_1, answer_2, answer_3, answer_4, answer_5, yellow, green]\n",
+      "Index: []\n",
+      "empty_df\n",
+      "Empty DataFrame\n",
+      "Columns: [load_ts, user, time]\n",
+      "Index: []\n",
+      "empty_df\n"
+     ]
     }
    ],
    "source": [
-    "df.dtypes"
+    "%run mumger.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "690aac06-761b-44da-b37c-92a35a2be510",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
