corrected mumger to export list as one string

--- a/puzzle_scraper.ipynb
+++ b/puzzle_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "c031226b-e4e2-4408-8fed-3e559e759f7a",
    "metadata": {
     "tags": []
@@ -16,7 +16,8 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.firefox.options import Options\n",
-    "import re"
+    "import re\n",
+    "from mumger import data_export"
    ]
   },
   {
@@ -74,8 +75,8 @@
     "        if 'right-letter-right-column' in cell_class:\n",
     "            green.append(int(re.search(match, cell_class).group(0).strip('C')) + 1)\n",
     "            \n",
-    "row.update({'yellow' : yellow,\n",
-    "            'green' : green})"
+    "row.update({'yellow' : str(yellow),\n",
+    "            'green' : str(green)})"
    ]
   },
   {
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "21c74757-70a8-4af1-9b40-92a0ccc0f290",
    "metadata": {},
    "outputs": [
@@ -208,20 +209,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-23 20:33:34.362 INFO    selenium.webdriver.common.selenium_manager: Executing: /home/tomwh/.local/lib/python3.10/site-packages/selenium/webdriver/common/linux/selenium-manager --browser firefox --output json\n"
+      "2023-04-24 10:49:42.268 INFO    selenium.webdriver.common.selenium_manager: Executing: /home/tomwh/.local/lib/python3.10/site-packages/selenium/webdriver/common/linux/selenium-manager --browser firefox --output json\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [date, puzzle_number, plusword_solution, clue_across_1, clue_across_2, clue_across_3, clue_across_4, clue_across_5, clue_down_1, clue_down_2, clue_down_3, clue_down_4, clue_down_5, answer_1, answer_2, answer_3, answer_4, answer_5, yellow, green]\n",
-      "Index: []\n",
+      "something in df\n",
       "empty_df\n",
-      "Empty DataFrame\n",
-      "Columns: [load_ts, user, time]\n",
-      "Index: []\n",
       "empty_df\n"
      ]
     }
@@ -233,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "690aac06-761b-44da-b37c-92a35a2be510",
+   "id": "8c231e32-1a39-4c88-a830-ef587b28a8ef",
    "metadata": {},
    "outputs": [],
    "source": []
