--- a/old_notebooks/historical_mumger.ipynb
+++ b/old_notebooks/historical_mumger.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "79c84ad7-9fe9-4395-8f58-8da283b95747",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3488480166.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_12066/3488480166.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    from ../plotting_streamlit import data_import, scraper\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "%cache magic is now registered in ipython\n"
      ]
     }
    ],
@@ -21,7 +20,7 @@
     "import requests\n",
     "import re\n",
     "import datetime as dt\n",
-    "from data/plotting_streamlit import data_import, scraper"
+    "import cache_magic"
    ]
   },
   {
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7a6d43bd-616b-487f-9a52-434664ab1090",
    "metadata": {},
    "outputs": [],
@@ -53,6 +52,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "36faf4d3-ff7e-4884-8620-7706df28f1fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scraper(url, max_pages, whole_post_list):\n",
+    "    \n",
+    "    # Increments through every page on website until it runs out for hits max_pages\n",
+    "    for page_number in range(max_pages):\n",
+    "        \n",
+    "        try:\n",
+    "            \n",
+    "            # gets request via bs4\n",
+    "            r = requests.get(url + str(page_number))\n",
+    "            soup = BeautifulSoup(r.content)\n",
+    "            \n",
+    "            # Finds original post on each page and splits it into metadata and post text\n",
+    "            original_post = soup.find_all('div', class_= 'p-4 pb-1 pt-2.5 lg:py-2.5 mt-2.5 lg:mt-1.5 border-t border-b sm:border sm:rounded border-mumsnet-forest-border bg-mumsnet-forest dark:bg-mumsnet-forest-dark')\n",
+    "            original_post_paragraphs=original_post[0].find_all('p')\n",
+    "            \n",
+    "            # converts to list\n",
+    "            meta_data = original_post_paragraphs[0].getText().split()\n",
+    "            \n",
+    "            # removes fullstop in position 1\n",
+    "            meta_data.pop(1)\n",
+    "            \n",
+    "            # converts text to list and then joins items together\n",
+    "            post_text = original_post_paragraphs[1].getText().split()\n",
+    "            post_text =' '.join(post_text)\n",
+    "            \n",
+    "            # Adds OP metadata and text together and adds together for OP on every page\n",
+    "            meta_data.append(post_text)\n",
+    "            whole_post = meta_data\n",
+    "            whole_post_list.append(whole_post)\n",
+    "            \n",
+    "            # finds all non-OP post on page and gets data\n",
+    "            posts= soup.find_all('div', class_='lg:py-2.5 pt-2.5 pb-1 p-4 border-t border-b sm:border sm:rounded mt-1.5 overflow-x-hidden bg-white dark:bg-gray-800 border-gray-200')\n",
+    "            for post in posts:\n",
+    "                post_info = post.getText().split()\n",
+    "                \n",
+    "                #first 4 items are meta data\n",
+    "                meta_data = post_info[:4]\n",
+    "                \n",
+    "                #removes uneeded full stop\n",
+    "                meta_data.pop(1)\n",
+    "                \n",
+    "               # joins post text together\n",
+    "                post_text = post_info[4:]\n",
+    "                post_text = ' '.join(post_text)\n",
+    "                \n",
+    "                \n",
+    "                # appends metadata and text together and adds to list\n",
+    "                meta_data.append(post_text)\n",
+    "                whole_post = meta_data\n",
+    "                whole_post_list.append(whole_post)\n",
+    "            \n",
+    "        except:\n",
+    "            pass\n",
+    "\n",
+    "    return whole_post_list"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b8e2c62c-21ae-41dd-abfe-e31a4cc01b08",
    "metadata": {},
@@ -62,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f5ccb6c5-607b-4685-ba22-4739129f9c38",
    "metadata": {},
    "outputs": [],
@@ -74,7 +137,7 @@
     "\n",
     "for url in url_list:\n",
     "\n",
-    "    whole_post_list = scraper(url, ma, whole_post_list)\n",
+    "    whole_post_list = scraper(url, max_posts, whole_post_list)\n",
     "            \n",
     "df = pd.DataFrame(whole_post_list, columns=['user', 'date', 'time', 'text'])"
    ]
@@ -91,53 +154,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5584b88b-4419-47cb-9731-d25d46ef190d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>text</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ILoveAllRainbowsx</td>\n",
+       "      <td>13/11/2022</td>\n",
+       "      <td>14:18</td>\n",
+       "      <td>Previous thread: www.mumsnet.com/talk/am_i_bei...</td>\n",
+       "      <td>2022-11-13 14:18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>436</th>\n",
+       "      <td>ILoveAllRainbowsx</td>\n",
+       "      <td>13/11/2022</td>\n",
+       "      <td>14:18</td>\n",
+       "      <td>Previous thread: www.mumsnet.com/talk/am_i_bei...</td>\n",
+       "      <td>2022-11-13 14:18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>412</th>\n",
+       "      <td>ILoveAllRainbowsx</td>\n",
+       "      <td>13/11/2022</td>\n",
+       "      <td>14:18</td>\n",
+       "      <td>Previous thread: www.mumsnet.com/talk/am_i_bei...</td>\n",
+       "      <td>2022-11-13 14:18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>847</th>\n",
+       "      <td>ILoveAllRainbowsx</td>\n",
+       "      <td>13/11/2022</td>\n",
+       "      <td>14:18</td>\n",
+       "      <td>Previous thread: www.mumsnet.com/talk/am_i_bei...</td>\n",
+       "      <td>2022-11-13 14:18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>ILoveAllRainbowsx</td>\n",
+       "      <td>13/11/2022</td>\n",
+       "      <td>14:18</td>\n",
+       "      <td>Previous thread: www.mumsnet.com/talk/am_i_bei...</td>\n",
+       "      <td>2022-11-13 14:18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2279</th>\n",
+       "      <td>Floralnomad</td>\n",
+       "      <td>17/04/2023</td>\n",
+       "      <td>01:30</td>\n",
+       "      <td>00:54 nice one today Add message Save Share Re...</td>\n",
+       "      <td>2023-04-17 01:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2281</th>\n",
+       "      <td>DadDadDad</td>\n",
+       "      <td>17/04/2023</td>\n",
+       "      <td>07:08</td>\n",
+       "      <td>1:27 for me. Took a while to get started on th...</td>\n",
+       "      <td>2023-04-17 07:08:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2282</th>\n",
+       "      <td>Albaniarocks</td>\n",
+       "      <td>17/04/2023</td>\n",
+       "      <td>07:21</td>\n",
+       "      <td>⏱️ I just completed PlusWord in 00:52 www.tele...</td>\n",
+       "      <td>2023-04-17 07:21:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2283</th>\n",
+       "      <td>JoyDivisionOvenGlovesx</td>\n",
+       "      <td>17/04/2023</td>\n",
+       "      <td>07:41</td>\n",
+       "      <td>⏱️ I just completed PlusWord in 01:12 Another ...</td>\n",
+       "      <td>2023-04-17 07:41:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2284</th>\n",
+       "      <td>Readytostartagain</td>\n",
+       "      <td>17/04/2023</td>\n",
+       "      <td>13:53</td>\n",
+       "      <td>⏱️ I just completed PlusWord in 00:59 Add mess...</td>\n",
+       "      <td>2023-04-17 13:53:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2909 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        user        date   time  \\\n",
+       "0          ILoveAllRainbowsx  13/11/2022  14:18   \n",
+       "436        ILoveAllRainbowsx  13/11/2022  14:18   \n",
+       "412        ILoveAllRainbowsx  13/11/2022  14:18   \n",
+       "847        ILoveAllRainbowsx  13/11/2022  14:18   \n",
+       "389        ILoveAllRainbowsx  13/11/2022  14:18   \n",
+       "...                      ...         ...    ...   \n",
+       "2279             Floralnomad  17/04/2023  01:30   \n",
+       "2281               DadDadDad  17/04/2023  07:08   \n",
+       "2282            Albaniarocks  17/04/2023  07:21   \n",
+       "2283  JoyDivisionOvenGlovesx  17/04/2023  07:41   \n",
+       "2284       Readytostartagain  17/04/2023  13:53   \n",
+       "\n",
+       "                                                   text           timestamp  \n",
+       "0     Previous thread: www.mumsnet.com/talk/am_i_bei... 2022-11-13 14:18:00  \n",
+       "436   Previous thread: www.mumsnet.com/talk/am_i_bei... 2022-11-13 14:18:00  \n",
+       "412   Previous thread: www.mumsnet.com/talk/am_i_bei... 2022-11-13 14:18:00  \n",
+       "847   Previous thread: www.mumsnet.com/talk/am_i_bei... 2022-11-13 14:18:00  \n",
+       "389   Previous thread: www.mumsnet.com/talk/am_i_bei... 2022-11-13 14:18:00  \n",
+       "...                                                 ...                 ...  \n",
+       "2279  00:54 nice one today Add message Save Share Re... 2023-04-17 01:30:00  \n",
+       "2281  1:27 for me. Took a while to get started on th... 2023-04-17 07:08:00  \n",
+       "2282  ⏱️ I just completed PlusWord in 00:52 www.tele... 2023-04-17 07:21:00  \n",
+       "2283  ⏱️ I just completed PlusWord in 01:12 Another ... 2023-04-17 07:41:00  \n",
+       "2284  ⏱️ I just completed PlusWord in 00:59 Add mess... 2023-04-17 13:53:00  \n",
+       "\n",
+       "[2909 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['date'] = df['date'].str.replace('Yesterday', dt.datetime.strftime((dt.datetime.today() - dt.timedelta(days=1)), '%d/%m/%Y'))\n",
     "df['date'] = df['date'].str.replace('Today', dt.datetime.strftime(dt.datetime.today(), '%d/%m/%Y'))\n",
-    "df['load_ts'] = df['date'] + ' ' + (df['time']+':00')\n",
-    "df['load_ts'] = df['load_ts'] + '.000'\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "142b6276-273f-4401-8796-d1dafcf009ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['load_ts'] = pd.to_datetime(df['load_ts'], format='%d/%m/%Y %H:%M:%S.%f')\n",
-    "df = df.sort_values(by=['load_ts'])\n",
-    "df['load_ts'] = df['load_ts'].dt.strftime('%Y-%m-%d %H:%M:%S.%f')\n",
-    "df['load_ts'] = df['load_ts'].str[:-3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e419b5b-a5a1-4689-b2c6-af923b93ece0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "619449d9-4a32-4c4c-9c46-396a69a9ba1e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.dtypes"
+    "df['timestamp'] = pd.to_datetime(df['date'] + ' ' + (df['time']+':00'), format='%d/%m/%Y %H:%M:%S')\n",
+    "df = df.sort_values(by=['timestamp'])"
    ]
   },
   {
@@ -150,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "86e2efb6-5742-41ba-8b3e-76e9bd47755b",
    "metadata": {},
    "outputs": [],
@@ -172,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0b789493-e469-4e54-a415-30f581528120",
    "metadata": {},
    "outputs": [],
@@ -181,15 +363,135 @@
     "df= df.drop_duplicates(subset=['user', 'date'])\n",
     "df = df.drop(columns=['date', 'time'])\n",
     "df = df.rename(columns={'text' : 'time'})\n",
-    "df = df[['load_ts', 'time', 'user']]"
+    "df = df[['timestamp', 'user', 'time']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "76208623-f5e9-49cc-8b43-26f2e789b00f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>user</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>949</th>\n",
+       "      <td>2022-11-13 17:05:00</td>\n",
+       "      <td>BrilliantGreenFlamingo</td>\n",
+       "      <td>00:04:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>925</th>\n",
+       "      <td>2022-11-13 17:20:00</td>\n",
+       "      <td>MarmiteWine</td>\n",
+       "      <td>00:01:41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>2022-11-14 00:09:00</td>\n",
+       "      <td>Drywhitefruitycidergin</td>\n",
+       "      <td>00:02:19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>956</th>\n",
+       "      <td>2022-11-14 00:51:00</td>\n",
+       "      <td>Floralnomad</td>\n",
+       "      <td>00:01:21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2022-11-14 02:48:00</td>\n",
+       "      <td>Sunbird24</td>\n",
+       "      <td>00:00:53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2279</th>\n",
+       "      <td>2023-04-17 01:30:00</td>\n",
+       "      <td>Floralnomad</td>\n",
+       "      <td>00:00:54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2281</th>\n",
+       "      <td>2023-04-17 07:08:00</td>\n",
+       "      <td>DadDadDad</td>\n",
+       "      <td>00:01:27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2282</th>\n",
+       "      <td>2023-04-17 07:21:00</td>\n",
+       "      <td>Albaniarocks</td>\n",
+       "      <td>00:00:52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2283</th>\n",
+       "      <td>2023-04-17 07:41:00</td>\n",
+       "      <td>JoyDivisionOvenGlovesx</td>\n",
+       "      <td>00:01:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2284</th>\n",
+       "      <td>2023-04-17 13:53:00</td>\n",
+       "      <td>Readytostartagain</td>\n",
+       "      <td>00:00:59</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1670 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               timestamp                    user      time\n",
+       "949  2022-11-13 17:05:00  BrilliantGreenFlamingo  00:04:03\n",
+       "925  2022-11-13 17:20:00             MarmiteWine  00:01:41\n",
+       "39   2022-11-14 00:09:00  Drywhitefruitycidergin  00:02:19\n",
+       "956  2022-11-14 00:51:00             Floralnomad  00:01:21\n",
+       "16   2022-11-14 02:48:00               Sunbird24  00:00:53\n",
+       "...                  ...                     ...       ...\n",
+       "2279 2023-04-17 01:30:00             Floralnomad  00:00:54\n",
+       "2281 2023-04-17 07:08:00               DadDadDad  00:01:27\n",
+       "2282 2023-04-17 07:21:00            Albaniarocks  00:00:52\n",
+       "2283 2023-04-17 07:41:00  JoyDivisionOvenGlovesx  00:01:12\n",
+       "2284 2023-04-17 13:53:00       Readytostartagain  00:00:59\n",
+       "\n",
+       "[1670 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
@@ -206,23 +508,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5ca8456c-fa5c-446b-b372-65ed65bba990",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df.to_csv('../data/historical_mumsnet_data_' + str(dt.datetime.now()) + '.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca5efc70-f63a-46c4-85f2-b09ce4215b33",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('data/historical_mumsnet_data_' + str(dt.datetime.now()) + '.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -241,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
